--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "dev": "node ace serve --watch",
     "lint": "eslint . --ext .js,.ts"
   },
+  "browserslist": [
+    "> 0.5%",
+    "last 2 versions",
+    "Firefox ESR",
+    "not dead"
+  ],
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.0",
     "@symfony/webpack-encore": "^1.4.0",
@@ -15,6 +21,8 @@
     "eslint": "^7.27.0",
     "eslint-plugin-adonis": "^1.3.1",
     "pino-pretty": "^5.0.2",
+    "sass": "^1.51.0",
+    "sass-loader": "^11.0.0",
     "typescript": "~4.2",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
